assets/homepage.css
/* Header */

.top {
  min-height: 100vh;
}

.header {
  padding-bottom: 10px;
}

p, h1, h2, .arrow {
  padding-left: 20px;
}

.tag, .subtag {
  padding-right: 20px;
}

.name {
  font-family: 'Roboto', sans-serif;
  padding-top: 0px;
  margin: 0;
  font-size: 22px;
}

.email {
  font-family: 'Roboto', sans-serif;
  margin: 5px 0 0 0;
}

.tag {
  margin-top: 200px;
  font-weight: normal;
}

.subtag {
  font-family: 'Montserrat', sans-serif;
  line-height: 2;
}

.background {
  position: absolute;
  top: 0;
}

.background img {
  object-fit: cover;
  width: 100%;
  max-width: 1024px;
  height: 200px;
  object-position: 0 25%;
  filter: opacity(20%);
}

.arrow {
  width: 100%;
  text-align: center;
  margin-top: 50px;
  margin-bottom: 50px;
}

.arrow img {
  width: 16px;
}


@media only screen and (min-width: 800px) {
  body {
    margin: 0 auto;
  }

  p, h1, h2, .arrow {
    padding-left: 60px;
  }
  .tag, .subtag {
    padding-right: 60px;
  }

  /* header */
  .header {
    margin-top: 60px;
    padding-bottom: 0;
    width: 100%;
    height: 500px;
  }

  .background {
    width: calc(100% - 250px);
    margin-left: 250px;
    top: 40px;
  }

  .background img {
    max-width: inherit;
    height: inherit;
    max-height: 500px;
  }

  .tag {
    font-size: 54px;
  }

  .arrow {
    text-align: left;
  }
}

/* Client */

.client {
  display: flex;
  flex-wrap: wrap-reverse;
}

.image img {
  max-width: 100%;
  height: auto;
}

.client {
  width: 100%;
  margin-top: 80px;
}

.blurb {
}

.blurb p {
  font-family: 'Montserrat', sans-serif;
  font-size: 18px;
}

.blurb p a {
  text-decoration: underline;
}

.fhc {
  background-color: rgba(18, 120, 198,.20);
}

.mfd {
  background-color: rgba(200, 200, 200, .20);
}

@media only screen and (min-width: 800px) {
  .client {
    flex-wrap: nowrap;
    justify-content: space-between;
  }

  .blurb {
    margin: 100px 0 0 0;
  }

  .blurb h2 {
    white-space: nowrap;
  }

  div.experience {
    padding-left: 0;
  }
}


/* Experience */

.experience {
  margin: 50px 0 0 0;
  background-color: #EEEEFF;
  padding-left: 20px;
}

.experience h2 {
  padding-top: 20px;
  text-transform: uppercase;
  font-size: 16px;
}

.gig {
  display: flex;
  padding-bottom: 15px;
}

.gig p {
  font-family: 'Roboto', sans-serif;
  font-size: 16px;
  margin: 3px 0;
}

.gig p.company-name {
  font-weight: bold;
}

.location {
  width: 50%;
  min-width: 300px;
  max-width: 400px;
}

